disable cookie alert

--- a/blog.html
+++ b/blog.html
@@ -559,13 +559,13 @@
     </div>
 
     <!-- Cookie alert box -->
-    <div class="alert dark-mode alert-black fade show text-center position-fixed start-0 bottom-0 z-index-1030 w-100"
+    <!-- <div class="alert dark-mode alert-black fade show text-center position-fixed start-0 bottom-0 z-index-1030 w-100"
         role="alert">
         <p class="mb-0">🍪 Этот веб-сайт использует cookie. <a href="policy.html" target="_blank">Подробнее</a> <button
                 type="button" class="btn btn-secondary btn-sm align-baseline ms-2 mt-2 mt-md-0" data-bs-dismiss="alert"
                 aria-label="Close"><span aria-hidden="true">Ок</span></button>
         </p>
-    </div>
+    </div> -->
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
