uninstall parallax js

--- a/index.html
+++ b/index.html
@@ -151,76 +151,7 @@
     <main class="main">
 
         <!-- HERO -->
-        <section class="section overflow-hidden frontpage-hero">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-lg-10 text-center">
-                        <div class="mb-4">
-                            <h1 class="text-uppercase fw-bold mb-3">Разработка сайтов в Москве</h1>
-                            <p class="fs-20 fs-lg-24">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque at
-                                nostrum voluptatum qui maiores placeat magni deserunt veniam laborum nesciunt sit
-                                corporis aut ut, excepturi eveniet assumenda dicta officia quo!</p>
-                        </div>
-                        <a class="btn btn-primary btn-gradient btn-lg" href="#mainForm" data-bs-toggle="modal"
-                            data-bs-target="#mainForm">Связаться</a>
-                    </div>
-                </div>
-            </div>
-            <div class="container-fluid">
-                <div class="swiper heroSwiper py-4">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <!-- Parallax gfx -->
-                            <a href="cases-item.html">
-                                <div class="parallax">
-                                    <div class="parallax-layer w-100" data-depth="0.1" style="z-index: 2;">
-                                        <img class="mx-auto" src="img/device-tablet-01.png" alt="tablet">
-                                    </div>
-                                    <div class="parallax-layer w-100" data-depth="0.25" style="z-index: 3;">
-                                        <img class="mx-auto" src="img/device-phone-01.png" alt="phone">
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="swiper-slide">
-                            <!-- Parallax gfx -->
-                            <a href="cases-item.html">
-                                <div class="parallax">
-                                    <div class="parallax-layer w-100" data-depth="0.1" style="z-index: 2;">
-                                        <img class="mx-auto" src="img/device-tablet-01.png" alt="tablet">
-                                    </div>
-                                    <div class="parallax-layer w-100" data-depth="0.25" style="z-index: 3;">
-                                        <img class="mx-auto" src="img/device-phone-01.png" alt="phone">
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="swiper-slide">
-                            <!-- Parallax gfx -->
-                            <a href="cases-item.html">
-                                <div class="parallax">
-                                    <div class="parallax-layer w-100" data-depth="0.1" style="z-index: 2;">
-                                        <img class="mx-auto" src="img/devices1.png" alt="tablet">
-                                    </div>
-                                    <div class="parallax-layer w-100" data-depth="0.25" style="z-index: 3;">
-                                        <img class="mx-auto" src="img/devices2.png" alt="phone">
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                    <button type="button" class="btn btn-icon btn-prev rounded-circle m-2" id="heroSwiper-prev">
-                        <i class="bx bx-chevron-left"></i>
-                    </button>
-                    <button type="button" class="btn btn-icon btn-next rounded-circle m-2" id="heroSwiper-next">
-                        <i class="bx bx-chevron-right"></i>
-                    </button>
-                </div>
-            </div>
-        </section>
-
-        <!-- HERO 02 -->
-        <section class="section section-hero-02 pt-3 pt-lg-5">
+        <section class="section section-hero-02">
             <div class="container">
                 <div class="row g-3 align-items-end">
                     <div class="col-lg-6 text-center text-lg-start">
@@ -241,7 +172,7 @@
         </section>
 
         <!-- Выгодная разработка сайта в короткий срок -->
-        <section class="section py-5 dark-mode bg-color-black color-white">
+        <section class="section dark-mode bg-color-black color-white">
             <div class="container">
                 <div class="row gy-4">
                     <div class="col-lg-6">
@@ -377,7 +308,7 @@
         </section>
 
         <!-- Подберите готовый сайт -->
-        <section class="section py-5 dark-mode bg-color-black color-white">
+        <section class="section dark-mode bg-color-black color-white">
             <div class="container-fluid">
                 <div class="row justify-content-center">
                     <div class="col-12 text-center">
@@ -418,7 +349,7 @@
         </section>
 
         <!-- CTA -->
-        <section class="section py-5 dark-mode bg-color-black color-white overflow-hidden">
+        <section class="section dark-mode bg-color-black color-white overflow-hidden">
             <div class="container">
                 <div class="cta-promo p-4 px-4 px-lg-5 bg-img" style="background-image: url('img/promo-bg-02.png');">
                     <div class="py-3">
@@ -443,7 +374,7 @@
         </section>
 
         <!-- Цены на создание сайтов под ключ  -->
-        <section class="section py-5 dark-mode bg-color-black color-white">
+        <section class="section dark-mode bg-color-black color-white">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-12 text-center">
@@ -549,7 +480,7 @@
         </section>
 
         <!-- Услуги -->
-        <section class="section py-5 dark-mode bg-color-black color-white">
+        <section class="section dark-mode bg-color-black color-white">
             <div class="container">
                 <p class="fs-20 fs-lg-24 fw-light">Услуги</p>
                 <p class="fs-24 fs-lg-28 fw-light mb-5 mb-lg-4"><span class="h1 me-3 d-block d-lg-inline">Техническая
@@ -566,7 +497,7 @@
         </section>
 
         <!-- Как изменились наши клиенты -->
-        <section class="section py-5 dark-mode bg-color-black color-white">
+        <section class="section dark-mode bg-color-black color-white">
             <div class="container-fluid">
                 <div class="row justify-content-center">
                     <div class="col-12 text-center">
@@ -635,7 +566,7 @@
         </section>
 
         <!-- Заказать сайт в веб-студии недорого -->
-        <section class="section py-5 dark-mode bg-color-black color-white">
+        <section class="section dark-mode bg-color-black color-white">
             <div class="container">
                 <div class="cta p-5 px-4 px-lg-5 rounded">
                     <div class="row gy-4 align-items-center">
@@ -657,7 +588,7 @@
         </section>
 
         <!-- Вопросы и ответы -->
-        <section class="section py-5">
+        <section class="section">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8">
@@ -954,7 +885,6 @@
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/img-comparison-slider.js"></script>
-    <script src="js/parallax.min.js"></script>
     <script src="js/fancybox.umd.js"></script>
     <script src="js/main.js"></script>
 
