deinstall comparison slider

--- a/index.html
+++ b/index.html
@@ -496,75 +496,6 @@
             </div>
         </section>
 
-        <!-- Как изменились наши клиенты -->
-        <section class="section dark-mode bg-color-black color-white">
-            <div class="container-fluid">
-                <div class="row justify-content-center">
-                    <div class="col-12 text-center">
-                        <h2 class="h1 mb-5">Как <span class="color-blue">изменились</span> наши клиенты</h2>
-                    </div>
-                </div>
-                <div class="row justify-content-between">
-                    <div class="col-6 text-center">
-                        <p class="fs-28 fs-lg-32">До</p>
-                    </div>
-                    <div class="col-6 text-center">
-                        <p class="fs-28 fs-lg-32">После</p>
-                    </div>
-                </div>
-                <div class="position-relative">
-                    <div class="swiper changeclientsSwiper">
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide">
-                                <div class="d-flex justify-content-center">
-                                    <!-- Изображения для примера, в итоговом проекте НЕ ИСПОЛЬЗОВАТЬ -->
-                                    <img-comparison-slider class="mx-n5 mx-xl-0">
-                                        <img slot="first" src="img/before-01.jpg" alt="Before Mode">
-                                        <img slot="second" src="img/after-01.jpg" alt="After Mode">
-                                        <div slot="handle" class="img-comparison-slider--handle">
-                                            <img src="img/handle.svg" alt="">
-                                        </div>
-                                    </img-comparison-slider>
-                                </div>
-                            </div>
-                            <div class="swiper-slide">
-                                <div class="d-flex justify-content-center">
-                                    <!-- Изображения для примера, в итоговом проекте НЕ ИСПОЛЬЗОВАТЬ -->
-                                    <img-comparison-slider class="mx-n5 mx-xl-0">
-                                        <img slot="first" src="img/before-01.jpg" alt="Before Mode">
-                                        <img slot="second" src="img/after-01.jpg" alt="After Mode">
-                                        <div slot="handle" class="img-comparison-slider--handle">
-                                            <img src="img/handle.svg" alt="">
-                                        </div>
-                                    </img-comparison-slider>
-                                </div>
-                            </div>
-                            <div class="swiper-slide">
-                                <div class="d-flex justify-content-center">
-                                    <!-- Изображения для примера, в итоговом проекте НЕ ИСПОЛЬЗОВАТЬ -->
-                                    <img-comparison-slider class="mx-n5 mx-xl-0">
-                                        <img slot="first" src="img/before-01.jpg" alt="Before Mode">
-                                        <img slot="second" src="img/after-01.jpg" alt="After Mode">
-                                        <div slot="handle" class="img-comparison-slider--handle">
-                                            <img src="img/handle.svg" alt="">
-                                        </div>
-                                    </img-comparison-slider>
-                                </div>
-                            </div>
-                        </div>
-                        <button type="button" class="btn btn-icon btn-prev rounded-circle m-2"
-                            id="changeclientsSwiper-prev">
-                            <i class="bx bx-chevron-left"></i>
-                        </button>
-                        <button type="button" class="btn btn-icon btn-next rounded-circle m-2"
-                            id="changeclientsSwiper-next">
-                            <i class="bx bx-chevron-right"></i>
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </section>
-
         <!-- Заказать сайт в веб-студии недорого -->
         <section class="section dark-mode bg-color-black color-white">
             <div class="container">
@@ -701,8 +632,7 @@
     </main>
 
     <!-- Футер -->
-    <div class="footer-border"></div>
-    <footer class="footer py-4 dark-mode bg-color-black color-white">
+    <footer class="footer dark-mode bg-color-black color-white">
         <div class="container">
             <div class="row gy-2 py-4">
                 <div class="col-lg-3">
@@ -884,7 +814,6 @@
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
-    <script src="js/img-comparison-slider.js"></script>
     <script src="js/fancybox.umd.js"></script>
     <script src="js/main.js"></script>
 
