--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
     </main>
 
     <!-- Футер -->
-    <footer class="footer dark-mode bg-color-black color-white">
+    <footer class="footer">
         <div class="container">
             <div class="row gy-2 py-4">
                 <div class="col-lg-3">
