--- a/promotion-item.html
+++ b/promotion-item.html
@@ -261,8 +261,7 @@
     </main>
 
     <!-- Футер -->
-    <div class="footer-border"></div>
-    <footer class="footer py-4 dark-mode bg-color-black color-white">
+    <footer class="footer">
         <div class="container">
             <div class="row gy-2 py-4">
                 <div class="col-lg-3">
