--- a/about.html
+++ b/about.html
@@ -421,47 +421,60 @@
     <!-- Футер -->
     <footer class="footer">
         <div class="container">
-            <div class="row gy-2 py-4">
-                <div class="col-lg-3">
-                    <div class="d-flex justify-content-center justify-content-lg-start">
-                        <a class="navbar-brand logo hover-opacity" href="index.html">
-                            <img src="img/logo-white.svg" alt="">
-                        </a>
+            <div class="footer-row">
+                <div class="row">
+                    <div class="col-lg-3">
+                        <div class="widget-footer">
+                            <div class="d-flex justify-content-center justify-content-lg-start">
+                                <a class="logo footer-logo hover-opacity" href="index.html">
+                                    <img src="img/logo-black.svg" alt="">
+                                </a>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="col-lg-9 text-center text-lg-end">
-                    <div class="d-none d-lg-block">
-                        <ul class="nav justify-content-end">
-                            <li class="nav-item"><a href="index.html" class="nav-link px-2">Создание сайтов</a></li>
-                            <li class="nav-item"><a href="about.html" class="nav-link px-2">Веб-студия</a></li>
-                            <li class="nav-item"><a href="cases.html" class="nav-link px-2">Кейсы</a></li>
-                            <li class="nav-item"><a href="shop.html" class="nav-link px-2">Шаблоны</a></li>
-                            <li class="nav-item"><a href="blog.html" class="nav-link px-2">Блог</a></li>
-                            <li class="nav-item"><a href="contact.html" class="nav-link px-2">Контакты</a></li>
-                        </ul>
-                    </div>
-                    <div class="mt-3">
-                        <p class="text-uppercase color-blue"><span class="d-block d-lg-inline">Закажите создание</span> и продвижение сайта</p>
+                    <div class="col-lg-9 d-none d-lg-block">
+                        <div class="widget-footer">
+                            <div class="footer-nav nav justify-content-center justify-content-lg-end">
+                                <a href="index.html" class="nav-link">Создание сайтов</a>
+                                <a href="shop.html" class="nav-link">Каталог сайтов</a>
+                                <a href="about.html" class="nav-link">Веб-студия</a>
+                                <a href="prices.html" class="nav-link">Цены</a>
+                                <a href="cases.html" class="nav-link">Кейсы</a>
+                                <a href="blog.html" class="nav-link">Блог</a>
+                                <a href="promotion.html" class="nav-link">Акции</a>
+                                <a href="contact.html" class="nav-link">Контакты</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="row py-3 py-lg-3">
-                <div class="col">
-                    <ul class="nav justify-content-center justify-content-lg-end">
-                        <li class="mx-2"><a class="hover-opacity" href="#"><img src="img/WhatsApp.svg" alt=""></a></li>
-                        <li class="mx-2"><a class="hover-opacity" href="#"><img src="img/Telegram.svg" alt=""></a></li>
-                    </ul>
+
+            <div class="footer-row">
+                <div class="widget-footer">
+                    <div class="nav gap-2 justify-content-center justify-content-lg-end">
+                        <a class="hover-opacity" href="#" target="_blank" rel="nofollow"><img src="img/WhatsApp.svg" alt=""></a>
+                        <a class="hover-opacity" href="#" target="_blank" rel="nofollow"><img src="img/Telegram.svg" alt=""></a>
+                        <a class="hover-opacity" href="#" target="_blank" rel="nofollow"><img src="img/WhatsApp.svg" alt=""></a>
+                        <a class="hover-opacity" href="#" target="_blank" rel="nofollow"><img src="img/Telegram.svg" alt=""></a>
+                    </div>
                 </div>
             </div>
-            <div class="row gy-2 py-4 align-items-end">
-                <div class="col-lg-6 text-center text-lg-end order-lg-2">
-                    <p><a class="text-decoration-none" href="mailto:support@startsite.studio">support@startsite.studio</a></p>
-                    <p><a class="text-decoration-none" href="tel:+74951595901">+7 (495) 159-59-01</a></p>
-                </div>
-                <div class="col-lg-6 text-center text-lg-start order-lg-1">
-                    <p>© Startsite
-                        <script>document.write(new Date().getFullYear())</script>. Все права защищены.
-                    </p>
+
+            <div class="footer-row">
+                <div class="row align-items-end">
+                    <div class="col-lg-6 order-lg-2">
+                        <div class="widget-footer text-center text-lg-end">
+                            <div class="nav gap-3 flex-column">
+                                <a class="text-decoration-none ff-title fw-700" href="mailto:support@startsite.studio">support@startsite.studio</a>
+                                <a class="text-decoration-none ff-title fw-700" href="tel:+74951595901">+7 (495) 159-59-01</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 order-lg-1">
+                        <div class="widget-footer text-center text-lg-start">
+                            <p class="mb-0">© Startsite <script>document.write(new Date().getFullYear())</script>. Все права защищены.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
