fix header menu

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
 
     <!-- sticky-heading -->
     <div class="sticky-heading">
-        <!-- Меню -->
         <header class="header">
             <nav class="navbar navbar-expand-lg">
                 <div class="container">
@@ -73,7 +72,7 @@
                                 </ul>
                             </div>
                             <div class="header-widget d-lg-none">
-                                <ul class="mobile-socials nav">
+                                <div class="mobile-socials nav">
                                     <a class="nav-link" href="https://t.me/+79269949870" target="_blank" rel="nofollow">
                                         <img src="img/Telegram.svg" alt="">
                                     </a>
@@ -87,14 +86,13 @@
                                     <a class="nav-link" href="https://dzen.ru/startsite" target="_blank" rel="nofollow">
                                         <img src="img/dzen.svg" alt="">
                                     </a>
-                                </ul>
+                                </div>
                             </div>
                             <div class="header-widget d-lg-none">
-                                <ul class="mobile-contacts nav flex-column">
+                                <div class="mobile-contacts nav flex-column">
                                     <a class="nav-link" href="tel:+74951595901">+7 (495) 159-59-01</a>
-                                    <a class="nav-link"
-                                        href="mailto:support@startsite.studio">support@startsite.studio</a>
-                                </ul>
+                                    <a class="nav-link" href="mailto:support@startsite.studio">support@startsite.studio</a>
+                                </div>
                             </div>
                             <div class="header-widget d-none d-xxl-block text-end">
                                 <div class="d-flex flex-column">
