--- a/prices.html
+++ b/prices.html
@@ -29,7 +29,6 @@
 
     <!-- sticky-heading -->
     <div class="sticky-heading">
-        <!-- Меню -->
         <header class="header">
             <nav class="navbar navbar-expand-lg">
                 <div class="container">
@@ -45,22 +44,27 @@
                             <a class="logo navbar-logo hover-opacity" href="index.html">
                                 <img src="img/logo-black.svg" alt="">
                             </a>
-                            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                            <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
+                                aria-label="Close"></button>
                         </div>
                         <div class="offcanvas-body">
                             <div class="header-widget ms-auto mx-xxl-auto">
                                 <ul class="navbar-nav">
                                     <li class="nav-item dropdown">
-                                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-current="page">Создание сайтов</a>
+                                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
+                                            aria-current="page">Создание сайтов</a>
                                         <ul class="dropdown-menu">
-                                            <li><a class="dropdown-item" href="landing-01.html">Интернет-магазин</a></li>
-                                            <li><a class="dropdown-item" href="landing-01.html">Cайт для бизнеса</a></li>
-                                            <li><a class="dropdown-item" href="landing-01.html">Одностраничный сайт</a></li>
+                                            <li><a class="dropdown-item" href="landing-01.html">Интернет-магазин</a>
+                                            </li>
+                                            <li><a class="dropdown-item" href="landing-01.html">Cайт для бизнеса</a>
+                                            </li>
+                                            <li><a class="dropdown-item" href="landing-01.html">Одностраничный сайт</a>
+                                            </li>
                                         </ul>
                                     </li>
                                     <li class="nav-item"><a class="nav-link" href="shop.html">Каталог сайтов</a></li>
                                     <li class="nav-item"><a class="nav-link" href="about.html">Веб-студия</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="prices.html">Цены</a></li>
+                                    <li class="nav-item"><a class="nav-link active" href="prices.html">Цены</a></li>
                                     <li class="nav-item"><a class="nav-link" href="cases.html">Кейсы</a></li>
                                     <li class="nav-item"><a class="nav-link" href="blog.html">Блог</a></li>
                                     <li class="nav-item"><a class="nav-link" href="promotion.html">Акции</a></li>
@@ -68,36 +72,40 @@
                                 </ul>
                             </div>
                             <div class="header-widget d-lg-none">
-                                <ul class="mobile-socials nav">
+                                <div class="mobile-socials nav">
                                     <a class="nav-link" href="https://t.me/+79269949870" target="_blank" rel="nofollow">
                                         <img src="img/Telegram.svg" alt="">
                                     </a>
                                     <a class="nav-link" href="https://wa.me/79269949870" target="_blank" rel="nofollow">
                                         <img src="img/WhatsApp.svg" alt="">
                                     </a>
-                                    <a class="nav-link" href="https://vk.com/startsitestudio" target="_blank" rel="nofollow">
+                                    <a class="nav-link" href="https://vk.com/startsitestudio" target="_blank"
+                                        rel="nofollow">
                                         <img src="img/vk.svg" alt="">
                                     </a>
                                     <a class="nav-link" href="https://dzen.ru/startsite" target="_blank" rel="nofollow">
                                         <img src="img/dzen.svg" alt="">
                                     </a>
-                                </ul>
+                                </div>
                             </div>
                             <div class="header-widget d-lg-none">
-                                <ul class="mobile-contacts nav flex-column">
+                                <div class="mobile-contacts nav flex-column">
                                     <a class="nav-link" href="tel:+74951595901">+7 (495) 159-59-01</a>
                                     <a class="nav-link" href="mailto:support@startsite.studio">support@startsite.studio</a>
-                                </ul>
+                                </div>
                             </div>
                             <div class="header-widget d-none d-xxl-block text-end">
                                 <div class="d-flex flex-column">
-                                    <a class="ff-title fw-700 text-decoration-none text-nowrap" href="tel:+74951595901">+7 (495) 159-59-01</a>
-                                    <a class="text-decoration-none fs-12" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Заказать звонок</a>
+                                    <a class="ff-title fw-700 text-decoration-none text-nowrap"
+                                        href="tel:+74951595901">+7 (495) 159-59-01</a>
+                                    <a class="text-decoration-none fs-12" href="#mainForm" data-bs-toggle="modal"
+                                        data-bs-target="#mainForm">Заказать звонок</a>
                                 </div>
                             </div>
                         </div>
                         <div class="offcanvas-header">
-                            <button type="button" class="btn btn-primary w-100" data-bs-toggle="modal" data-bs-target="#mainForm">Оставить заявку</button>
+                            <button type="button" class="btn btn-primary w-100" data-bs-toggle="modal"
+                                data-bs-target="#mainForm">Оставить заявку</button>
                         </div>
                     </div>
                 </div>
