--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                 <p>Мы не продаем сайты - мы развиваем Ваш бизнес в интернете.</p>
                             </div>
                             <div class="mt-5">
-                                <div class="row g-3 row-cols-2 row-cols-md-3 row-cols-lg-3 justify-content-center">
+                                <div class="row row-cols-2 row-cols-md-3 row-cols-lg-3 justify-content-center">
                                     <div class="col">
                                         <div>
                                             <div class="h3 mb-0">+120</div>
