--- a/shop-item.html
+++ b/shop-item.html
@@ -21,7 +21,7 @@
     <div class="top-banner">
         <div class="container-fluid">
             <div class="d-flex gap-4 align-items-center justify-content-center">
-                <span class="top-banner__title h4">Акции месяца!</span>
+                <span class="top-banner__title">Акции месяца!</span>
                 <a class="btn btn-sale-1 btn-gradient btn-shadow-pulse" href="promotion.html">Узнать</a>
             </div>
         </div>
