main hero section fix

--- a/index.html
+++ b/index.html
@@ -116,54 +116,56 @@
     <!-- Контент -->
     <main class="main">
 
-        <!-- main-hero-section -->
-        <section class="section main-hero-section">
+        <!-- section-main-hero -->
+        <section class="section section-main-hero">
+
             <div class="parallax-wrap">
                 <img src="img/6208050.png">
                 <img src="img/6208051.png">
             </div>
-            <div class="container">
-                <div class="position-relative d-flex align-items-center">
+
+            <div class="main-hero-content">
+                <div class="container">
                     <div class="text-center text-lg-start" style="max-width: 800px;">
-                        <div class="pe-lg-5">
-                            <h1 class="h1">Создание и продвижение <br> <span class="color-blue">сайтов под ключ</span></h1>
+                        <div class="">
+                            <h1>Создание и продвижение <br> <span class="color-blue">сайтов под ключ</span></h1>
                             <div class="fs-lg-24">
                                 <p>Успешно реализуем проекты для малого и среднего бизнеса в короткий срок.</p>
-                            </div>
-                            <div class="fs-lg-24">
                                 <p>Мы не продаем сайты - мы развиваем Ваш бизнес в интернете.</p>
                             </div>
-                            <div class="mt-5">
-                                <div class="row row-cols-2 row-cols-md-3 row-cols-lg-3 justify-content-center">
-                                    <div class="col">
-                                        <div>
-                                            <div class="h3 mb-0">+120</div>
-                                            <div class="fs-14 fs-lg-16">Сделано проектов</div>
-                                        </div>
+                        </div>
+                        <div class="mt-5">
+                            <div class="row row-cols-2 row-cols-md-3 row-cols-lg-3 justify-content-center">
+                                <div class="col">
+                                    <div>
+                                        <div class="h3 mb-0">+120</div>
+                                        <div class="fs-14 fs-lg-16">Сделано проектов</div>
                                     </div>
-                                    <div class="col">
-                                        <div>
-                                            <div class="h3 mb-0">32</div>
-                                            <div class="fs-14 fs-lg-16">Специалиста в штате</div>
-                                        </div>
+                                </div>
+                                <div class="col">
+                                    <div>
+                                        <div class="h3 mb-0">32</div>
+                                        <div class="fs-14 fs-lg-16">Специалиста в штате</div>
                                     </div>
-                                    <div class="col">
-                                        <div>
-                                            <div class="h3 mb-0">8</div>
-                                            <div class="fs-14 fs-lg-16">Направлений в IT</div>
-                                        </div>
+                                </div>
+                                <div class="col">
+                                    <div>
+                                        <div class="h3 mb-0">8</div>
+                                        <div class="fs-14 fs-lg-16">Направлений в IT</div>
                                     </div>
                                 </div>
                             </div>
-                            <a class="btn btn-primary btn-gradient btn-shadow-pulse fs-18 py-3 mt-5" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Бесплатно ответим на вопросы</a>
+                        </div>
+                        <div class="mt-5">
+                            <a class="btn btn-primary btn-gradient btn-shadow-pulse fs-18 py-3" href="#mainForm" data-bs-toggle="modal" data-bs-target="#mainForm">Бесплатно ответим на вопросы</a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- main-hero-price -->
-        <section class="section main-hero-price">
+        <!-- section-hero-price -->
+        <section class="section section-hero-price">
             <div class="container">
                 <div class="row row-cols-1 row-cols-md-1 row-cols-lg-3">
                     <div class="col">
@@ -219,7 +221,7 @@
         </section>
 
         <!-- CTA -->
-        <section class="section">
+        <section class="section" style="display: none !important;">
             <div class="container">
                 <div class="cta-promo p-4 px-4 px-lg-5 bg-img" style="background-image: url('img/promo-bg-02.png');">
                     <div class="py-3">
